--- a/manuscript/refs.bib
+++ b/manuscript/refs.bib
@@ -31,6 +31,18 @@
   year={1999}
 }
 
+@article{bjornsson2004climate,
+  title={Climate and climatic variability at Lake M\'{y}vatn},
+  author={Bj\"{o}rnsson, Halld\'{o}r and J\'{o}nsson, Trausti},
+  journal={Aquatic Ecology},
+  volume={38},
+  number={2},
+  pages={129--144},
+  year={2004},
+  publisher={Springer}
+}
+
+
 @article{carpenter2017stan,
 author={Carpenter, Bob and Gelman, Andrew and Hoffman, Matthew D and Lee,
     Daniel and Goodrich, Ben and Betancourt, Michael and Brubaker,
@@ -207,6 +219,19 @@ url = {http://dx.doi.org/10.18637/jss.v022.i10},
   year={2010},
   publisher={Springer}
 }
+
+@article{ives2012detecting,
+  title={Detecting dynamical changes in nonlinear time series using 
+          locally linear state-space models},
+  author={Ives, Anthony R and Dakos, Vasilis},
+  journal={Ecosphere},
+  volume={3},
+  number={6},
+  pages={1--15},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
 
 @article{jeppesen2001fish,
   title={Fish and crustaceans in northeast Greenland lakes 
