--- a/manuscript/charr_ms.tex
+++ b/manuscript/charr_ms.tex
@@ -86,18 +86,20 @@ Running head: {Arctic charr demography}
 
 \section*{Abstract} \label{abstract}
 
-Quantifying temporal variation in demographic rates is a central goal of population ecology,
+Quantifying temporal variation in demographic rates is a central goal of population ecology
 in both basic and applied settings.
-In this study, we analysed a multidecadal age-structured time series 
-of arctic charr (\emph{Salvelinus alpinus}) catch  in Lake M\'{y}vatn, Iceland, 
+In this study, we analyzed a multidecadal age-structured time series 
+of Arctic charr (\emph{Salvelinus alpinus}) catch  in Lake M\'{y}vatn, Iceland, 
 to infer the time-varying demographic response of the population 
 to reduced harvest in the wake of the fishery's collapse.
 Our analysis shows that while survival probability of adults increased following the alleviation
-of harvesting pressure, per recruitment consistent declined over the entire study period.
+of harvesting pressure, 
+per recruitment consistently declined over most of the study period,
+until the final three years when it began to increase.
 The countervailing demographic trends resulted 
-in no directional change in the total population size or population growth rate.
+in limited directional change in the total population size and population growth rate.
 Rather, the population dynamics were dominated by large interannual variability
-and a shift towards a relatively older age distribution.
+and a shift towards an older age distribution.
 These results are indicative of a slow recovery of the population following its collapse,
 despite the rising number of adults due to relaxed harvest.
 
@@ -118,48 +120,52 @@ despite the rising number of adults due to relaxed harvest.
 \section*{Introduction}
 
 Quantifying temporal variation in demographic rates is a central goal of population ecology,
-as this underpins efforts to characterize both exogenous and endogenous drivers of population dynamics 
+because this underpins efforts to characterize both exogenous and 
+endogenous drivers of population dynamics 
 \citep{twombly1994comparative, zeng1998, koons2016life}.
 However, this endeavor is challenging, 
-as even the characterization of directional trends in demographic rates requires
+as the characterization of directional trends in demographic rates requires
 data spanning many years and 
-often relies on intensive mark-recpature (and related) approaches for statistical inference
+often relies on intensive mark-recapture (and related) approaches for statistical inference
 \citep[e.g.,][]{forcada2008life, hunter2010climate}.
 Both of these challenges are amplified in populations subject to large interannual variation
 in demographic rates, 
 which are often the targets of both basic and applied interest
 \citep[e.g.,][]{white2007irruptive}.
 Consequently, 
-there is a need for addtional studies that 
-explict quantify temporal variation in demographic rates 
+there is a need for additional studies that 
+explicitly quantify temporal variation in demographic rates 
 and the resulting population dynamics, 
 particularly for populations that have not been the subjects 
-of intensive mark-recpature-style campaigns.
+of intensive mark-recapture-style campaigns.
 
-In this study, we analysed a multidecadal age-structured time series 
-of arctic charr (\emph{Salvelinus alpinus}) catch  in Lake M\'{y}vatn, Iceland, 
+In this study, we analyzed a multidecadal age-structured time series 
+of Arctic charr (\emph{Salvelinus alpinus}) catch  in Lake M\'{y}vatn, Iceland, 
 to infer the time-varying demographic response of the population 
 to reduced harvest in the wake of the fishery's collapse.
 Arctic charr are salmonids with a circumpolar distribution
-and are basis of numerous commerical fisheries \citep{klemetsen2003atlantic}.
+and are the targets of 
+numerous commercial fisheries \citep{klemetsen2003atlantic}.
 Moreover,
-arctic charr have important effects in many artic 
-and boreal freshwater foodwebs owing to their roles as top consumers
+Arctic charr have important effects in many arctic 
+and boreal freshwater food webs owing to their roles as top consumers
 \citep{jeppesen2001fish, klemetsen2003atlantic}.
-In M\'{y}vatn, the charr sustained a large commerical fishery throughout much of the 
+In M\'{y}vatn, the charr sustained a large commercial fishery throughout much of the 
 twentieth century that was subject to exploitation rates upwards of 80\%,
-resulting in the fishery's collapse by the late 1980s \citep{gudbergsson2004}.
+associated in the fishery's collapse by the late 1980s \citep{gudbergsson2004}.
+A portion of the lake was also dredged during this period,
+which may have contributed the decline of the fishery \citep{einarsson2004myvatn}.
 A monitoring program was instituted in 1986 to monitor the population's
-response to declining harvesting pressure over the next few decades,
+response to declining harvesting pressure,
 including catch restrictions imposed in the early 2000s.
 
 Using these monitoring data, 
 we parameterized an age-structured demographic model with time-varying recruitment and survival 
-to charactreize the dynamics of the population.
-We modeled temporal variation in the demgoraphic rates as random walks, 
+to characterize the dynamics of the population.
+We modeled temporal variation in the demographic rates as random walks, 
 an approach that had previously been applied 
 to infer population growth rates from non-structured abundance 
-\citep{zeng1998}
+\citep{zeng1998, ives2012detecting}
 and for age-specific mortality rates inferred from fisheries stock assessments 
 \citep{nielsen2014estimation}. 
 This method takes advantage of the entire time series for estimating the parameters 
@@ -167,13 +173,13 @@ while allowing them to vary smoothly through time.
 Furthermore, the model is able to characterize a range of dynamics including those
 arising from negative density-dependence and environmental perturbations.
 The latter may be particularly important in the case of the M\'{y}vatn's charr,
-as the lake is subject to large fluctuations in primary and secondary production
+because the lake is subject to large fluctuations in primary and secondary production
 that may cascade up to the charr population 
 \citep{einarsson2004myvatn, einarsson2004clad, gardarsson2004population}.
 Accordingly, the purpose of our analysis is to 
-(a) characterize interannual variability in survival recruitment 
-in M\'{y}vatn's charr population 
-and (b) determine whether directional trends in these demographic rates have
+(i) characterize interannual variability in survival recruitment 
+in M\'{y}vatn's charr population, 
+and (ii) determine whether directional trends in these demographic rates have
 resulted in the recovery of the population in the wake of its collapse. 
 
 
@@ -194,34 +200,41 @@ resulted in the recovery of the population in the wake of its collapse.
 % ---------------------------------------------------------------------------------------
 
 M\'{y}vatn is located in northeastern Iceland (65°40’N 17°00’W) 
-and has a tundra-subarctic climate. 
+and has a tundra-subarctic climate \citep{bjornsson2004climate, einarsson2004myvatn}. 
 The lake spans $37 \text{km}^2$, 
-divided into north ($8 \text{km}^2$) and south ($29 \text{km}^2$) basins 
+divided into north (``Ytrifloi''; $8 \text{km}^2$) 
+and south (``Sy{\dh}rifloi''; $29 \text{km}^2$) basins 
 connected by a narrow channel \citep{einarsson2004myvatn}. 
 M\'{y}vatn is shallow (south basin mean depth = 2.3m) and 
-fed by nurient rich springs that sustain high benthic primary and secondary production.
+fed by nutrient-rich springs that sustain high benthic primary and secondary production.
 The latter comprises large but temporally variable populations of benthic invertebrates 
 such as midges and cladocerans \citep{einarsson2004clad, gardarsson2004population}.
 The benthic invertebrates are in turn 
 an important food source for M\'{y}vatn’s vertebrate populations, 
 including Arctic charr, threespine stickleback (\emph{Gasterosteus aculeatus}), 
 brown trout (\emph{Salmo trutta}), and waterfowl \citep{einarsson2004myvatn}. 
+The north basin was historically dredged, 
+which likely affected many populations in the lake, 
+although such effects are poorly understood \citep{einarsson2004myvatn}.
 
-While some arctic charr populations are anadromous, 
-M\'{y}vatn’s population to resides strictly within the lake, 
-despite a major outflow that connects the lake to the Greenland Sea \citep{gudbergsson2004}. 
-Spawning occurs in the fall among individuals aged 4 years and older. 
-There are two charr morphs within M\'{y}vatn: ``regular'' (size at maturation of 35--50cm) 
-and ``dwarf'' (20--25cm). However, the dwarf morph is restricted to a small 
-and relatively isolated part of the south basin; therefore, 
-the ``regular'' morph is the focus of this study. 
+While some Arctic charr populations are anadromous, 
+M\'{y}vatn’s population appears to reside strictly within the lake; 
+there is major outflow that connects the lake to the Greenland Sea,
+but natural barriers likely prevent individuals from entering the lake from downriver
+\citep{gudbergsson2004}. 
+There are two charr morphs within M\'{y}vatn: pelagic (size at maturation of 35--50cm) 
+and small benthic (20--25cm). However, the small benthic morph is restricted to a small 
+and relatively isolated part of the south basin \citep{gudbergsson2004}; 
+therefore, the pelagic morph is the focus of this study. 
 Gut content data reveal a diverse diet, including midges, snails, clams, zooplankton, 
 benthic crustaceans, and sticklebacks. 
-The large-bodied cladoceran Eurycercus is thought to be a particularly important prey item 
+The large-bodied cladoceran \emph{Eurycercus lamellatus} 
+is thought to be a particularly important prey item 
 \citep{gudbergsson2004}. 
-While some charr populations are cannibalistic \citep{klemetsen2003atlantic}, 
-especially in the absence of other large-bodied prey (e.g., fish), 
-the charr in M\'{y}vatn appear to lack cannibalism. 
+Some charr populations are cannibalistic \citep{klemetsen2003atlantic}, 
+especially in the absence of other large-bodied prey (e.g., fish).
+However, the charr in M\'{y}vatn appear to lack cannibalism based on gut content data
+\citep{gudbergsson2004}, although this is difficult to assess definitely. 
 
 % ---------------------------------------------------------------------------------------
 \subsection*{Data} 
@@ -238,14 +251,14 @@ most of which were located in the south basin.
 Captured individuals were aged either by otoliths directly or 
 with an estimate based on length.
 The surveys were conducted in fall (late August through September) 
-of every year (just before spawning) and in June in a subset of years. 
-For this analysis we used only the September data. 
+of every year just before spawning and in June in a subset of years. 
+For this analysis we used only the August/September data. 
 Therefore, in our age classifications an individual of age ``x'' is an individual 
 that survived to that age (e.g., an ``age 1'' individual was born in the previous fall). 
 The oldest individuals in the data set were 12 years old, although observations 
 of individuals older than 6 years are sparse
 (Figure \ref{fig:p_cohort}). 
-In M\'{y}vatn, charr reach maturity between 4 and 5 years of age, 
+In M\'{y}vatn, charr reach maturity at 4-5 years of age, 
 and therefore we grouped the older individuals into a single reproductive age class
 denoted ``age 4+''.
 
@@ -255,7 +268,8 @@ denoted ``age 4+''.
 
 We characterized the demography of the charr population 
 using an age-structured model \citep{caswell2001matrix}
-with time-varying demographic rates \citep{zeng1998, nielsen2014estimation}.
+with time-varying demographic rates 
+\citep{zeng1998, ives2012detecting, nielsen2014estimation}.
 The model projected the dynamics from one time step to the next as
 %
 \begin{equation} \label{eq:XPX}
@@ -282,8 +296,8 @@ The projection matrix was defined as
 %
 where $\rho_{t}$ is per capita recruitment 
 and $\phi_{1,t}$ is the survival probability of age class $i$. 
-The model assumes that only age 4+ is
-and that individuals surviving beyond age 4 return to the age 4+ class.
+The model includes only four age classes,
+and individuals surviving beyond age 4 return to the age 4+ class.
 
 Temporal variation in recruitment was modeled as a random walk on a log scale to ensure
 that the values remained positive:
@@ -311,14 +325,12 @@ on a logit-scale:
 %
 with the same random walk SD used for all age classes 
 to reduce the number of parameters fit by the model.
-Note that the ``random walks'' used to characterize the demographic parameters 
-do not necessarily possess the statistical properties 
-of true random walks (e.g., non-stationarity) 
-as they are constrained by the data during model fitting.
+Note that the ``random walks''  were constrained by the data during model fitting,
+and therefore were not necessarily non-stationary.
 Rather, they provided a convenient means 
 of allowing the parameters to vary smoothly through time.
 The random walk SDs for recruitment and survival 
-characterized the degree of temporal variation in the respective processes. 
+characterize the degree of temporal variation in the respective processes. 
 
 We fit the model in a Bayesian framework with a zero-inflated Poisson likelihood:
 %
@@ -340,32 +352,48 @@ We fit the model in a Bayesian framework with a zero-inflated Poisson likelihood
 \]
 \end{equation}
 %
-where $y_{s,i,t}$ is the annual catch for station $s$ and age class $i$,
-$\kappa_i$ is the age-specific catch rate (constrained between 0 and 1),
-$\theta$ is the probability of a zero from a Bernoulli sampling processes, and
-$s=100$ is a scaling factor introduced to improve computationally efficiency
-by preventing exessively large values of $x_{i,t}$ 
+where $y_{s,i,t}$ is the annual survey catch for station $s$ and age class $i$,
+$\kappa_i$ is the age-specific sampling efficiency (constrained between 0 and 1),
+$\theta$ is the probability of zero catch from a Bernoulli sampling processes
+(``zero-inflation rate''), 
+and $s=100$ is a scaling factor introduced to improve computationally efficiency
+by preventing excessively large values of $x_{i,t}$ 
 (such that $x_{i,t}$ itself is the population density scaled by $1/s$).
-The likelihood implies that the station-level abundance follows a Poisson distribution
-with a rate parameter equal to the lake-wide mean population density 
-scaled by the catch rate for the corresponding age class.
-We assumed that the lake-wide population was well mixed across years,
-and while we did not attempt to account for systematic differences between stations;
-no such differences were apparent from visual inspection of the data 
-(Figure  \ref{fig:p_sites}; see discussion of potential overdispersion below).
-Estimating a separate catch rate for each age class allowed the model to account
-for systematic differences in catch rates as a function of age.
-Such differences are quite apparent in the data, 
-as far too few first-year individuals were captured to account for the abundance subsequent
-ages, assuming a closed population. 
+The likelihood implies that the station-level abundance follows a zero-inflated 
+Poisson distribution with a rate parameter equal to the lake-wide mean population density 
+scaled by the sampling efficiency for the corresponding age class.
+We assumed that the lake-wide population was well-mixed across years,
+and while we did not attempt to account for systematic differences between stations,
+no such differences were consistently apparent from visual inspection of the data 
+(Figure  \ref{fig:p_sites}).
+Estimating a separate sampling efficiency for each age class allowed the model to account
+for systematic differences in sampling efficiency as a function of age.
+Such differences were visually apparent in the data, 
+as far too few first-year individuals were captured 
+to account for the abundance of subsequent ages assuming a closed population
+(Figure  \ref{fig:p_cohort}). 
+We originally fit the model with a Poisson likelihood without zero inflation.
+However, comparison of the posterior predictive distribution (see below)
+to the observed data made clear that zeros were overrepresented in the data
+relative to the model fit.
+The inferences from the Poisson and zero-inflated Poisson models were extremely similar,
+so we only present results from the latter.
+Note that zero-inflation is independent of age-specific variation in sampling efficiency
+and is best understood as the consequence of processes unrelated to sampling efficiency.
+
 We used exponential priors with rate 1/50 for the initial scaled population densities for
 each age class, 
 Gaussian priors with mean 0 and SD of either 5 or 1 for 
-initial log-recruitment or logit-survival (repsectively), 
-Gamma priors with shape and scale both of 1.5 for the random walk SDs,
-and Beta priors with shape parameters both of 2 for the catch rate.
-Priors were selected to be weakly informative regarding overall scale, 
-while not acting strongly against the likelihood in the posterior fit.
+initial log-recruitment or logit-survival (respectively), 
+Gamma priors with shape and scale both set to 1.5 for the random walk SDs,
+and Beta priors with shape parameters both set to 2 for the sampling efficiency
+and zero-inflation rate.
+The overall scales of these priors were weakly-informative relative to the 
+scales of the corresponding parameters.
+The Gamma priors were unimodal, concave-down near zero, and had zero-density at zero,
+allowing the resulting posteriors to be arbitrarily close to zero 
+while not being drawn towards zero by the prior.
+The Beta priors were unimodal and concave-down, with a mode at 0.5.
 
 To assess temporal trends in the demographic rates, 
 we used generalized least squares  (GLS) to fit lag-1 autoregressive models
@@ -375,34 +403,34 @@ Recruitment and survival probabilities were fit on their corresponding link scal
 and survival probabilities were fit for each age class separately.
 We used a similar approach to estimate trends in the asymptotic population growth rate
 (log scale), 
-caclulated as the leading eigenvalue of projection matrix $\mathbf{P}_{t}$.
+calculated as the leading eigenvalue of projection matrix $\mathbf{P}_{t}$.
 We performed this analysis on the asymptotic (as opposed to realized) growth rate 
-as we were principally interersted in the effects 
+because we were primarily interested in the effects 
 of the underlying demographic rates per se; 
 the realized growth rate would also have included transient fluctuations due to
-non-equilibrium age structure.
+non-equilibrium age structure \citep{caswell2001matrix}.
 For all GLS models, the response variables and year were z-scored 
 (subtracted mean and divided by SD) so that coefficients
 could be interpreted as effects sizes;
 fitted values were then back-scaled for the figures.
 
 The demographic model was fit using the statistical language Stan \citep{carpenter2017stan},
-with 4 chains, 3000 iterations, maximumum tree depth set to 13, and adapt delta set to 0.95.
+with 4 chains, 2000 iterations, maximum tree depth set to 14, and adapt delta set to 0.95.
 Convergence and quality of MCMC sampling were assessed using the diagnostics provided by Stan, 
-incuding Rhat, the number of divergences, and the effective sample size.
-We used posterior medians as point esitmates 
+including ``Rhat'', the number of divergences, and the effective sample size.
+We used posterior medians as point estimates 
 and the bounds of 68\% posterior quantiles as uncertainty intervals 
 (hereafter $\text{UI}_{68\%}$), 
 matching the nominal coverage of standard errors.
 To gauge the degree to which the data were overdispersed relative 
-the the model expectations, 
+to the model expectations, 
 we simulated 90\% prediction intervals from equation \ref{eq:likelihood} 
 and compared the coverage of these intervals to the data.
 To assess the extent to which the data contained statistically meaningful information 
 regarding temporal variation in the demographic rates,
 we compared the fit of the full model to a reduced model with the demographic
 rates fixed through time.
-We implemented the Stan model fitting with the \texttt{rstan} package \citep{stan2020rstan},
+We used Stan via the \texttt{rstan} package \citep{stan2020rstan},
 performed GLS with the \texttt{gls} function from the \texttt{nlme} package \citep{pinheiro2020nlme}, 
 and calculated the asymptotic growth rate with the \texttt{demogR} package \citep{holland2007demogR}.
 All analysis were conducted in R 4.0.3 \citep{r2020}. 
@@ -423,7 +451,7 @@ All analysis were conducted in R 4.0.3 \citep{r2020}.
 
 The full model provided a good visual fit to the station-level 
 catch data (Figure \ref{fig:p_catch}),
-with most of the temporal variation in lake-wide catch being captured by the model.
+with most of the temporal variation in lake-wide catch being well-characterized by the model.
 The 90\% prediction intervals provided reasonable coverage relative to the observed data,
 although the observations were zero-inflated in some years.
 While in principle it would be possible to account for such zero inflation in the model,
@@ -432,17 +460,17 @@ In contrast to the full model,
 the reduced model provided a poor fit to the data (Figure \ref{fig:p_catch_reduced}),
 displaying damped oscillations that did not reflect the observed dynamics
 (Figure \ref{fig:p_dens_reduced}).
-This was corroborated the median posterior log-likelihood calculated
+This was corroborated by the median posterior log-likelihood calculated
 from equation \ref{eq:likelihood},
-which was much higher for the full model (-4826) than for the reduced (-7314).
+which was much higher for the full model (-4065) than for the reduced (-6075).
 According to the full model, 
-the catch rates increased with age;
-the catch rate for age 1 individuals was around two orders of magnitude lower
+the sampling efficiencies increased with age;
+the sampling efficiency for age 1 individuals was around two orders of magnitude lower
 than for the other age classes (Table \ref{tab:param}). 
 This is consistent with the expectation that age 1 individuals 
 are generally too small to be captured by the gill nets used in the surveys.
 
-M\'{y}vatn's arctic charr population fluctuated substantially over the 3-decade time series
+M\'{y}vatn's Arctic charr population fluctuated substantially over the 3-decade time series
 (Figure \ref{fig:p_dens}), 
 with the asymptotic population growth rate varying across an order of magnitude 
 (Figure \ref{fig:p_lam}).
@@ -451,38 +479,40 @@ This variation was underpinned by substantial variation in survival
 and recruitment (Figure \ref{fig:p_rec}),
 both of which had random walk SDs 
 with posterior densities concentrated away from zero (Table \ref{tab:param}).
-The SD for survival as larger than for recruitment,
+The SD for survival was larger than for recruitment,
 especially when the SDs were judged against the scales of their corresponding 
 demographic processes. 
 This indicates that survival was generally more variable than recruitment,
-a fact that was visually apparent from their respective time series
-(Figures \ref{fig:p_surv} and \ref{fig:p_rec}),
-especially for age 1 and age 3 survival.
+a fact that was visually apparent from their respective time series,
+especially for age 1 and age 3 survival
+(Figures \ref{fig:p_surv} and \ref{fig:p_rec}).
 
 The survival probabilities for all age classes increased through time,
 although only the trend for age 4+ was statistically unambiguous 
 (Figure \ref{fig:p_surv}; Table \ref{tab:gls}).
-Elevated age 4+ survival was associated with a steady increase in the catch of
+Elevated age 4+ survival was associated with a steady increase in the survey catch of
 age 4+ individuals from 2005 onward (Figure \ref{fig:p_catch}). 
-In contrast, per capita recruitment declined through time, 
-consistent with declining age 1 catch,
-and this trend was stronger than for survival of any age class
+In contrast, per capita recruitment declined over most of the time series, 
+consistent with declining age 1 survey catch,
 (Figure \ref{fig:p_rec}; Table \ref{tab:gls}).
-Therefore, the positive effect of increased survival 
-was potentially negated by the decline in recruitment.
+However, per capita recruitment increased in the most recent three years,
+again corresponding with the  age 1 survey catch.
+The positive effect of increased survival was potentially negated by the decline in recruitment.
 Indeed, the geometric mean of the population growth rate across years was very close to one
-(0.99 [0.970, 1.02]), indicating no long-term population change.
-Furthermore, there was no clear trend in the population growth rate itself,
-despite its large interannual fluctuations
+(1.021 [0.997, 1.046]), indicating no long-term population change.
+Furthermore, the trend in the population growth rate itself was only slightly positive 
+and statistically ambiguous,
+especially when judged against its large interannual fluctuations
 (Figure \ref{fig:p_lam}; Table \ref{tab:gls}).
 The AR coefficients were moderately positive for most of the demographic parameters,
 except for age 2 survival and the population growth rate 
-for which the AR coefficients were slightly negative.
+for which the AR coefficients were somewhat negative.
 These negative coefficients potentially indicate overcompensatory dynamics,
-although this inference is quite tentative given their low magnitudes 
+although this inference is tentative given their low magnitudes 
 and absence of uncertainty estimates.
-Overall, the GLS results show that while the arctic charr population was very dynamic
-over the study period, it did not undergo meaningful directional change.
+Overall, the GLS results show that while the size of the Arctic charr population 
+was variable over the study period, 
+it did not undergo meaningful directional change.
 
 
 
@@ -497,27 +527,27 @@ over the study period, it did not undergo meaningful directional change.
 
 \section*{Discussion}
 
-In this study, 
-we used data from a multidecadal survey of arctic charr in Lake M\'{y}vatn
-to quantify the population's demography and potential recovery 
-following its collapse due to heavy exploitation 
-\citep{gudbergsson2004}.
+In this study 
+we used data from a multidecadal survey of Arctic charr in Lake M\'{y}vatn
+to quantify demographic changes and potential recovery of the population
+following its collapse.
 The survival probability of all age classes fluctuated substantially among years,
 with only adults showing an unambiguous positive trend over the course of the study period.
-In contrast, per capita recruitment clearly declined and experienced comparatively little
-variation around this trend.
+In contrast, per capita recruitment declined substantially and experienced comparatively little
+variation around this trend until an increase over the most recent three years.
 The countervailing changes in  per capita recruitment and adult survival resulted 
-in no directional change in the total population size or population growth rate,
+in limited directional change in the total population size or population growth rate,
 despite the rising number of adults.
 Rather, the dynamics of  M\'{y}vatn's charr population 
 were dominated by large interannual variability
 and a shift towards a relatively older age distribution.
-In and of itself, the increase in adult survival 
-is a positive signal for the population's recovery,
-and it has been taken as such by the local stakeholders 
-who have called for relaxing harvest restrictions in recent years.
-However, persistently low recruitment provides a cautionary note 
-that should be taken into consideration in formulating a management strategy.
+The somewhat elevated recruitment in recent years, alongside relatively high adult survival,
+does suggest that the population may in fact be recovering.
+However, any such recovery appears to be in its early stages and 
+has taken several decades to manifest.
+Therefore, recent calls from local stakeholders to relax harvest restrictions 
+in response to increased adult survival should be tempered by caution
+until the population's recovery has been more clearly established.
 
 A crucial step for projecting the future dynamics of M\'{y}vatn’s charr population 
 is identifying the underlying causes for the decline in per capita recruitment.
@@ -532,9 +562,10 @@ Furthermore, there is substantial spatial heterogeneity in the abundance
 of these aquatic invertebrates \citep{bartrons2015spatial} 
 which might disproportionately inhibit young juveniles 
 that have more restricted mobility than the larger age classes. 
-The large fluctuations in aquatic invertebrates are associated various consumer species 
-in addition to charr, including sticklebacks and brown trout that could serve 
-as competitors for young charr, and piscivorous waterfowl that could serve as predators 
+The large fluctuations in aquatic invertebrates are associated 
+with fluctuations in populations of other consumer species in addition to charr, 
+including sticklebacks and brown trout that could serve 
+as competitors with young charr, and piscivorous waterfowl that could serve as predators 
 \citep{einarsson2004myvatn}. 
 In addition to biotic factors, 
 temperature has received much attention as a driver of charr populations 
@@ -547,7 +578,7 @@ it is nonetheless possible that temperature changes have adversely affected recr
 in M\'{y}vatn’s charr population as has been seen in other Icelandic lakes 
 \citep{malmquist2009salmonid}. 
 
-This study provides a demographic assessment of a population of arctic charr in a single lake,
+This study provides a demographic assessment of a population of Arctic charr in a single lake,
 but it reinforces themes that have broad and increasing interest in applied ecology.
 Harvest-induced shifts in age structure have been documented in other fisheries,
 typically resulting in ``truncation'' of the oldest age classes 
@@ -557,7 +588,7 @@ Suppression of adult abundance is expected to have deleterious effects on popula
 with the corollary that relaxation of harvest should allow populations 
 to recover following overexploitation.
 However, this will only be true if juvenile recruitment is sufficient 
-to sustaining the population's recovery.
+to sustain the population's recovery.
 Recruitment in fish populations 
 has long been recognized as highly variable and difficult to predict
 owing to the interplay of numerous biotic and abiotic factors 
@@ -567,7 +598,7 @@ as complex suites of ecological factors are both difficult to understand
 and difficult to regulate, 
 particularly in comparison to a direct anthropogenic driver such as harvest
 \citep{beamish1999taking, link2002does}.
-The extent to which this is true for M\'{y}vatn's arctic charr is currently unknown.
+The extent to which this is true for M\'{y}vatn's Arctic charr is currently unknown.
 Nonetheless, 
 the countervailing trends in survival and recruitment 
 in the wake of alleviated of harvesting pressure
@@ -584,19 +615,21 @@ due to the complex ecological context in which such efforts take place.
 % ---------------------------------------------------------------------------------------
 % ---------------------------------------------------------------------------------------
 
-\section*{Acknowledgements} 
+\section*{Acknowledgments} 
 
 The data used in this manuscript were collected during routine sampling 
-of M\'{y}vatn’s charr population supported the Icelandic Marine and Freshwater Research Institute 
-and the Mývatn Research Station directed by \'{A}rni Einarsson. 
+of M\'{y}vatn’s charr population supported by 
+the Icelandic Marine and Freshwater Research Institute 
+and the M\'{y}vatn Research Station. 
 Further support came from NSF LTREB DEB-1556208 to ARI and 
 NSF Graduate Research Fellowship (DGE-1256259) supporting JSP.
-GG conducted the surveys of Mývatn’s Arctic charr population. 
-JSP conducted the analysis, 
+GG conducted the surveys of M\'{y}vatn’s Arctic charr population. 
+JSP conducted the analyses, 
 with input from ARI. 
 JSP wrote the first draft of the paper, 
 with substantial contributions from all authors to subsequent drafts.
-
+We thank \'{A}rni Einarsson, Camille Leblanc, and Bjarni Krist\'{o}fer Kristj\'{a}nsson
+for their constructive feedback on the manuscript.
 
 \bibliographystyle{ecology.bst}
 \clearpage
@@ -610,16 +643,19 @@ with substantial contributions from all authors to subsequent drafts.
 Posterior summaries of the parameters from the demographic model.
 Catch rates are dimensionless and constrained between 0 and 1,
 while the random walk SD are on the scale of either logit-survival or log-recruitment
-and constrained to be >0.
+and constrained to be positive.
 Uncertainty intervals are based on 68\% quantiles, 
 matching the nominal coverage of standard errors.
+Note that initial values for the random walks and 
+age-specific population density are not shown in this table
+but can be seen in the corresponding figures.
 }
 \setlength{\tabcolsep}{12pt}
 \begin{tabular}{llc}
 \toprule
 Model parameter        &                         & Posterior median [\text{UI}_{68\%}] \\
 \cmidrule{1-3}
-catch rate             & age 1                   & 0.003 [0.001, 0.005]                \\
+sampling efficiency    & age 1                   & 0.003 [0.001, 0.005]                \\
 &                        age 2                   & 0.13 [0.08, 0.19]                   \\
 &                        age 3                   & 0.47 [0.30, 0.66]                   \\
 &                        age 4+                  & 0.66 [0.46, 0.83]                   \\
@@ -676,12 +712,12 @@ population growth rate  &        & -0.02  \pm~0.13           & ~0.18 \pm~0.13   
 \caption{\label{fig:p_catch}
 Station-level catch (points) and 90\% posterior prediction intervals (shading) 
 from the demographic model.
-The prediction intervals include stochasticity arising from the Poisson sampling process,
+The prediction intervals include stochasticity arising from the Poisson sampling process
 and therefore represent the predicted distribution of catch according to the model. 
-The solid lines are medians of the the prediction distributions and quantify the expected
+The solid lines are medians of the prediction distributions and quantify the expected
 catch; note that this is not the same quantity as the estimated population density, 
 shown in Figure \ref{fig:p_dens}.
-The y-axis is log+1 transformed to accommodate zeros.
+The y-axis is on a log+1 scale to accommodate zeros.
 }
 \end{figure}
 \clearpage
@@ -697,7 +733,7 @@ Average population density across stations (solid line)
 inferred from the demographic model.
 Shading depicts 68\% uncertainty intervals, 
 matching the nominal coverage of standard errors.
-The y-axis is log transformed.
+The y-axis is on a log scale.
 }
 \end{figure}
 \clearpage
@@ -712,12 +748,12 @@ The y-axis is log transformed.
 Asymptotic population growth rate (solid blue line) inferred from the demographic model.
 Shading depicts 68\% uncertainty intervals, 
 matching the nominal coverage of standard errors.
-The dashed horizontal line indiates a growth rate of 1,
+The dashed horizontal line indicates a growth rate of 1,
 which corresponds to no change in the population size from one time step to the next.
 The solid black line represents the fitted values from the GLS model
 fit on a log-scale and then back-transformed 
 to match the scale of the population growth rate.
-Note however, that the y-axis of the figure is log-transformed, 
+Note however, that the y-axis is on a log scale, 
 thereby preserving the linearity of the data and model fit.
 }
 \end{figure}
@@ -737,6 +773,8 @@ The solid black line represents the fitted values from the GLS models
 fit separately for each age class.
 Note that logit-survival probability ranging from -5 to 5 
 corresponds to actual survival probability ranging from 0.007 to 0.993.
+The dashed horizontal line indicates a zero, corresponding to 
+an actual survival probability of 0.5.
 }
 \end{figure}
 \clearpage
@@ -809,10 +847,10 @@ from the reduced version of the demographic model
 with survival and recruitment fixed through time.
 The prediction intervals include stochasticity arising from the Poisson sampling process,
 and therefore represent the predicted distribution of catch according to the model. 
-The solid lines are medians of the the prediction distributions and quantify the expected
+The solid lines are medians of the prediction distributions and quantify the expected
 catch; note that this is not the same quantity as the estimated population density, 
 shown in Figure \ref{fig:p_dens_reduced}.
-The y-axis is log+1 transformed to accommodate zeros.
+The y-axis is on a log+1 scale to accommodate zeros.
 }
 \end{figure}
 \clearpage
@@ -829,7 +867,7 @@ inferred from the reduced version of the demographic model
 with survival and recruitment fixed through time.
 Shading depicts 68\% uncertainty intervals, 
 matching the nominal coverage of standard errors.
-The y-axis is log transformed.
+The y-axis is on a log scale.
 }
 \end{figure}
 \clearpage
